pixiu-ingress-controller/examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: pixiu
spec:
  controller: "pixiu.apache.org/pixiu-ingress-controller"
  parameters:
    apiGroup: "pixiu.apache.org"
    kind: "GatewayProxy"
    name: "pixiu-proxy-config"
    namespace: "default"
    scope: "Namespace"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pixiu-ingress
spec:
  ingressClassName: pixiu
  rules:
    - host: httpbin.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
